--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,9 @@ runs:
       shell: bash
     - run: pip install -q packaging
       shell: bash
-    # - run: echo "::add-path::${{ github.workspace }}/.github/bin"
-    #   shell: bash
     - run: echo "::set-env name=GENNARO::coupon_day"
+      shell: bash
+    - run: echo "${{ github.action_path }}"
+      shell: bash
+    - run: echo "::add-path::${{ github.action_path }}/bin"
       shell: bash
